--- a/XTT@GM.ini
+++ b/XTT@GM.ini
@@ -107,31 +107,31 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹))(?!.*(X|x|×|Emby|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*[🧃|🍾|🍸|🧉|🍹])(?!.*[X|x|×|Emby|🥤]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(🇭🇰|港|HK|Hong))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🧃|🍾|🍸|🧉|🍹))(?!.*(X|x|×|Emby|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*[🧃|🍾|🍸|🧉|🍹])(?!.*[X|x|×|Emby|🥤]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(🧃|🍾|🍸|🧉|🍹))(?!.*(X|x|×|Emby|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*[🧃|🍾|🍸|🧉|🍹])(?!.*[X|x|×|Emby|🥤]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(🧃|🍾|🍸|🧉|🍹))(?!.*(X|x|×|Emby|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*[🧃|🍾|🍸|🧉|🍹])(?!.*[X|x|×|Emby|🥤]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(🧃|🍾|🍸|🧉|🍹))(?!.*(X|x|×|Emby|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*[🧃|🍾|🍸|🧉|🍹])(?!.*[X|x|×|Emby|🥤]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🧃|🍾|🍸|🧉|🍹))(?!.*(X|x|×|Emby|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*[🧃|🍾|🍸|🧉|🍹])(?!.*(?!.*[X|x|×|Emby|🥤]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))((?=.*0\.[1-9]))(?!.*Emby))|(?=.*(0\.0[1-9]))(?!.*Emby))).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*[🧃|🍾|🍸|🧉|🍹]).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 XTTemby`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
