--- a/XTT@GM.ini
+++ b/XTT@GM.ini
@@ -93,8 +93,8 @@ custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 guguEmby`select`[]🌏 XTTemby
-custom_proxy_group=📺 mjjEmby`select`[]🌏 GMemby
+custom_proxy_group=📺 guguEmby`select`[]🌏 守候线路
+custom_proxy_group=📺 mjjEmby`select`[]🌏 古茗线路
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
@@ -133,9 +133,9 @@ custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(🇰🇷|韩|韓|首尔
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 XTTemby`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候线路`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 GMemby`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
