--- a/test.yaml
+++ b/test.yaml
@@ -39,7 +39,7 @@ proxy-providers:
 proxy-groups:
  - {name: 🚀 低倍节点, type: select, proxies: [🇭🇰 香港低倍, 🇹🇼 台湾低倍, 🇸🇬 狮城低倍, 🇯🇵 日本低倍, 🇺🇲 美国低倍, 🇰🇷 韩国低倍]}
  - {name: 🚀 高级节点, type: select, proxies: [🇭🇰 香港高级, 🇹🇼 台湾高级, 🇸🇬 狮城高级, 🇯🇵 日本高级, 🇺🇲 美国高级, 🇰🇷 韩国高级]}
- - {name: 🚀 手动切换, type: select, proxies: [*]} 
+ - {name: 🚀 手动切换, type: select, proxies: [🛫 守候网络, 🛫 MESL, 🛫 CTC]} 
  - {name: ⚛️ AI, type: select, proxies: [🇺🇲 美国高级, 🚀 高级节点, 🚀 手动切换]} 
  - {name: 🛍️ GooglePlay, type: select, proxies: [🇭🇰 香港低倍, 🇹🇼 台湾低倍, 🇸🇬 狮城低倍, 🇯🇵 日本低倍, 🇺🇲 美国低倍, 🇰🇷 韩国低倍]} 
  - {name: 📺 YouTube, type: select, proxies: [🇭🇰 香港低倍, 🇹🇼 台湾低倍, 🇸🇬 狮城低倍, 🇯🇵 日本低倍, 🇺🇲 美国低倍, 🇰🇷 韩国低倍]} 
@@ -73,88 +73,88 @@ proxy-groups:
 # tolerance 超过差值才会切换（默认100ms）
 
 # HK低倍
-- {name: 🇭🇰 守候低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇭🇰 MESL低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇭🇰 CTC低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇭🇰 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇭🇰 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇭🇰 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
 
 # TW低倍
-- {name: 🇹🇼 守候低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇹🇼 MESL低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇹🇼 CTC低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇹🇼 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇹🇼 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇹🇼 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
 
 # SG低倍
-- {name: 🇸🇬 守候低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇸🇬 MESL低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇸🇬 CTC低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇸🇬 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇸🇬 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇸🇬 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
 
 # JP低倍
-- {name: 🇯🇵 守候低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇯🇵 MESL低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇯🇵 CTC低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇯🇵 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇯🇵 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇯🇵 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
 
 # US低倍
-- {name: 🇺🇲 守候低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇺🇲 MESL低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇺🇲 CTC低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇺🇲 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇺🇲 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇺🇲 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
 
 # KR低倍
-- {name: 🇰🇷 守候低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇰🇷 MESL低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇰🇷 CTC低倍, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇰🇷 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇰🇷 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇰🇷 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
 
 # HK高级
-- {name: 🇭🇰 守候高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
-- {name: 🇭🇰 MESL高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
-- {name: 🇭🇰 CTC高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
+- {name: 🇭🇰 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
+- {name: 🇭🇰 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
+- {name: 🇭🇰 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
 
 # TW高级
-- {name: 🇹🇼 守候高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
-- {name: 🇹🇼 MESL高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
-- {name: 🇹🇼 CTC高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
+- {name: 🇹🇼 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
+- {name: 🇹🇼 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
+- {name: 🇹🇼 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
 
 # SG高级
-- {name: 🇸🇬 守候高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
-- {name: 🇸🇬 MESL高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
-- {name: 🇸🇬 CTC高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
+- {name: 🇸🇬 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
+- {name: 🇸🇬 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
+- {name: 🇸🇬 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
 
 # JP高级
-- {name: 🇯🇵 守候高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
-- {name: 🇯🇵 MESL高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
-- {name: 🇯🇵 CTC高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
+- {name: 🇯🇵 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
+- {name: 🇯🇵 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
+- {name: 🇯🇵 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
 
 # US高级
-- {name: 🇺🇲 守候高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
-- {name: 🇺🇲 MESL高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
-- {name: 🇺🇲 CTC高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
+- {name: 🇺🇲 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
+- {name: 🇺🇲 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
+- {name: 🇺🇲 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
 
 # KR高级
-- {name: 🇰🇷 守候高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(kr).*(?i)([1-9]\d*x)"}
-- {name: 🇰🇷 MESL高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(kr).*(?i)([1-9]\d*x)"}
-- {name: 🇰🇷 CTC高级, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(kr).*(?i)([1-9]\d*x)"}
+- {name: 🇰🇷 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(kr).*(?i)([1-9]\d*x)"}
+- {name: 🇰🇷 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(kr).*(?i)([1-9]\d*x)"}
+- {name: 🇰🇷 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(kr).*(?i)([1-9]\d*x)"}
 
 
-- {name: 🇭🇰 香港低倍, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇭🇰 守候低倍, 🇭🇰 MESL低倍, 🇭🇰 CTC低倍]"}
-- {name: 🇹🇼 台湾低倍, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇹🇼 守候低倍, 🇹🇼 MESL低倍, 🇹🇼 CTC低倍]"}
-- {name: 🇸🇬 狮城低倍, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇸🇬 守候低倍, 🇸🇬 MESL低倍, 🇸🇬 CTC低倍]"}
-- {name: 🇯🇵 日本低倍, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇯🇵 守候低倍, 🇯🇵 MESL低倍, 🇯🇵 CTC低倍]"}
-- {name: 🇺🇲 美国低倍, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇺🇲 守候低倍, 🇺🇲 MESL低倍, 🇺🇲 CTC低倍]"}
-- {name: 🇰🇷 韩国低倍, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇰🇷 守候低倍, 🇰🇷 MESL低倍, 🇰🇷 CTC低倍]"}
+- {name: 🇭🇰 香港低倍, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇭🇰 守候低倍, 🇭🇰 MESL低倍, 🇭🇰 CTC低倍]"}
+- {name: 🇹🇼 台湾低倍, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇹🇼 守候低倍, 🇹🇼 MESL低倍, 🇹🇼 CTC低倍]"}
+- {name: 🇸🇬 狮城低倍, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇸🇬 守候低倍, 🇸🇬 MESL低倍, 🇸🇬 CTC低倍]"}
+- {name: 🇯🇵 日本低倍, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇯🇵 守候低倍, 🇯🇵 MESL低倍, 🇯🇵 CTC低倍]"}
+- {name: 🇺🇲 美国低倍, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇺🇲 守候低倍, 🇺🇲 MESL低倍, 🇺🇲 CTC低倍]"}
+- {name: 🇰🇷 韩国低倍, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇰🇷 守候低倍, 🇰🇷 MESL低倍, 🇰🇷 CTC低倍]"}
 
-- {name: 🇭🇰 香港高级, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇭🇰 MESL高级, 🇭🇰 CTC高级, 🇭🇰 守候高级]"}
-- {name: 🇹🇼 台湾高级, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇹🇼 MESL高级, 🇹🇼 CTC高级, 🇹🇼 守候高级]"}
-- {name: 🇸🇬 狮城高级, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇸🇬 MESL高级, 🇸🇬 CTC高级, 🇸🇬 守候高级]"}
-- {name: 🇯🇵 日本高级, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇯🇵 MESL高级, 🇯🇵 CTC高级, 🇯🇵 守候高级]"}
-- {name: 🇺🇲 美国高级, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇺🇲 MESL高级, 🇺🇲 CTC高级, 🇺🇲 守候高级]"}
-- {name: 🇰🇷 韩国高级, type: fallback, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, lazy: true, use: [🇰🇷 MESL高级, 🇰🇷 CTC高级, 🇰🇷 守候高级]"}
+- {name: 🇭🇰 香港高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇭🇰 MESL高级, 🇭🇰 CTC高级, 🇭🇰 守候高级]"}
+- {name: 🇹🇼 台湾高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇹🇼 MESL高级, 🇹🇼 CTC高级, 🇹🇼 守候高级]"}
+- {name: 🇸🇬 狮城高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇸🇬 MESL高级, 🇸🇬 CTC高级, 🇸🇬 守候高级]"}
+- {name: 🇯🇵 日本高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇯🇵 MESL高级, 🇯🇵 CTC高级, 🇯🇵 守候高级]"}
+- {name: 🇺🇲 美国高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇺🇲 MESL高级, 🇺🇲 CTC高级, 🇺🇲 守候高级]"}
+- {name: 🇰🇷 韩国高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇰🇷 MESL高级, 🇰🇷 CTC高级, 🇰🇷 守候高级]"}
 
-- {name: 🇭🇰 香港游戏, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(hk).*(?i)(udpn)"}
-- {name: 🇹🇼 台湾游戏, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(tw).*(?i)(udpn)"}
-- {name: 🇸🇬 狮城游戏, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(sg).*(?i)(udpn)"}
-- {name: 🇯🇵 日本游戏, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(jp).*(?i)(udpn)"}
-- {name: 🇺🇲 美国游戏, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(us).*(?i)(udpn)"}
-- {name: 🇰🇷 韩国游戏, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(kr).*(?i)(udpn)"}
+- {name: 🇭🇰 香港游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(hk).*(?i)(udpn)"}
+- {name: 🇹🇼 台湾游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(tw).*(?i)(udpn)"}
+- {name: 🇸🇬 狮城游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(sg).*(?i)(udpn)"}
+- {name: 🇯🇵 日本游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(jp).*(?i)(udpn)"}
+- {name: 🇺🇲 美国游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(us).*(?i)(udpn)"}
+- {name: 🇰🇷 韩国游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(kr).*(?i)(udpn)"}
 
-- {name: 🌏 守候线路, type: url-test, url: 'http://www.gstatic.com/generate_204', interval: 60, timeout: 5, tolerance: 20, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk|tw|sg|jp).*(0\.[1-9])|(0\.0[1-9])"}"}
+- {name: 🌏 守候线路, type: url-test, interval: 60, timeout: 5, tolerance: 20, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk|tw|sg|jp).*(0\.[1-9])|(0\.0[1-9])"}"}
 
 # 规则集（yaml 文件每天自动更新）
 rule-providers:
